request: add storeClients, storeCompanies
